samples/_failures_safe/1761650345_6db1dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_561ab61a.c: In function ‘display_stats’:
./samples/SAFE/__tmp_561ab61a.c:141:12: error: missing terminating " character
  141 |     printf("ERROR count
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_561ab61a.c:141:5: error: expected expression at end of input
  141 |     printf("ERROR count
      |     ^~~~~~
./samples/SAFE/__tmp_561ab61a.c:141:5: error: expected declaration or statement at end of input
